src/test/ui/consts/const-fn-error.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-fn-error.rs:7:14
   |
LL |     for i in 0..x {
   |              ^^^^

error[E0019]: constant function contains unimplemented expression type
  --> $DIR/const-fn-error.rs:7:14
   |
LL |     for i in 0..x {
   |              ^^^^

error[E0019]: constant function contains unimplemented expression type
  --> $DIR/const-fn-error.rs:7:5
   |
LL | /     for i in 0..x {
LL | |
LL | |
LL | |
LL | |
LL | |         sum += i;
LL | |     }
   | |_____^

error[E0080]: evaluation of constant value failed
  --> $DIR/const-fn-error.rs:7:14
   |
LL |     for i in 0..x {
   |              ^^^^ calling non-const function `<std::ops::Range<usize> as std::iter::IntoIterator>::into_iter`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0015, E0019, E0080.
For more information about an error, try `rustc --explain E0015`.
